<resources>
    <string name="app_name">Proffy</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_on_boarding_fragment_label">First On Boarding Fragment</string>
    <string name="second_on_boarding_fragment_label">Second On Boarding Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_01">01.</string>
    <string name="on_boarding_one_text">Encontre vários professores para ensinar você</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_02">02</string>
    <string name="teacher_explanin">Ou dê aulas sobre o que você mais conhece</string>
    <string name="button_description">navigate to next screen button</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="what_wanna_do"><b>O que deseja fazer?</b></string>
    <string name="welcome">Seja bem-vindo.</string>
    <string name="study">Estudar</string>
    <string name="give_classes">Dar aulas</string>
    <string name="wanna_be_proffy">Quer ser um Proffy\?</string>
    <string name="first_step">Para começar, você precisa se cadastrar como professor na nossa plataforma web.</string>
    <string name="all_rigth">Tudo Bem</string>
</resources>
