<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.androiproffy.ui.giveclasses.GiveClassesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple"
        tools:context=".ui.giveclasses.GiveClassesFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/wanna_be_proffy"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStep"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:lineHeight="26dp"
            android:text="@string/first_step"
            android:textColor="@color/white"
            android:textFontWeight="@integer/material_motion_duration_medium_1"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="294dp"
            android:layout_height="56dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/layout_border_round"
            android:backgroundTint="@color/green"
            android:onClickListener="@{() -> viewModel.navigateBackHome()}"
            android:text="@string/all_rigth"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStep" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>