<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.androiproffy.ui.onBoarding.FirstOnBoardingFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/internConstraint"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@color/purple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dar_aulas"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="96dp"
            android:fontFamily="@font/archivo_narrow"
            android:text="@string/_01"
            android:textColor="@color/textBase"
            android:textFontWeight="500"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/internConstraint" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/on_boarding_one_text"
            android:textFontWeight="500"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/one"
            app:layout_constraintTop_toBottomOf="@id/one" />

        <Button
            android:id="@+id/btnArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="98dp"
            android:background="@drawable/ic_arrow"
            android:contentDescription="@string/button_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{()-> viewModel.navigateToNextScreen()}"
            app:layout_constraintTop_toBottomOf="@id/description" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>