<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.androiproffy.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple"
        tools:context=".ui.home.HomeFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:background="@drawable/ilustra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textFontWeight="@integer/config_navAnimTime"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/ivBanner"
            app:layout_constraintTop_toBottomOf="@id/ivBanner" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWannaDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/what_wanna_do"
            android:textColor="@color/white"
            android:textFontWeight="@integer/config_navAnimTime"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/tvWelcome"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clButtons"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWannaDo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clEstudy"
                android:layout_width="140dp"
                android:layout_height="158dp"
                android:background="@color/light_purple"
                android:onClickListener="@{()-> viewModel.navigateToStudy()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBook"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/estudar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="54dp"
                    android:fontFamily="@font/archivo_black"
                    android:text="@string/study"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/ivBook"
                    app:layout_constraintTop_toBottomOf="@id/ivBook" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clGiveClasses"
                android:layout_width="140dp"
                android:layout_height="158dp"
                android:background="@color/green"
                android:onClickListener="@{()-> viewModel.navigateToGiveClasses()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBoard"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/dar_aulas"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="54dp"
                    android:fontFamily="@font/archivo_black"
                    android:text="@string/give_classes"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/ivBoard"
                    app:layout_constraintTop_toBottomOf="@id/ivBoard" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalConections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Total de XXX conexões já realizadas"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/clButtons"
            app:layout_constraintTop_toBottomOf="@id/clButtons" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_star"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toEndOf="@id/tvTotalConections"
            app:layout_constraintTop_toTopOf="@id/tvTotalConections" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>